--- a/app/Makefile
+++ b/app/Makefile
@@ -27,12 +27,12 @@ APP_LOAD_PARAMS += --path $(APPPATH)
 
 APPVERSION_M=0
 APPVERSION_N=0
-APPVERSION_P=1
+APPVERSION_P=2
 APPVERSION=$(APPVERSION_M).$(APPVERSION_N).$(APPVERSION_P)
 APP_LOAD_FLAGS= --appFlags 0x240 --dep Idena:$(APPVERSION)
 
 CHAIN=idena
-DEFINES += CHAINID_UPCASE=\"IDENA\" CHAINID_COINNAME=\"DNA\" CHAIN_KIND=CHAIN_KIND_IDENA CHAIN_ID=0
+DEFINES += CHAINID_UPCASE=\"IDENA\" CHAINID_COINNAME=\"IDNA\" CHAIN_KIND=CHAIN_KIND_IDENA CHAIN_ID=0
 APPNAME = "Idena"
 DEFINES_LIB=
 APP_LOAD_FLAGS=--appFlags 0xa40
